--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.poetry]
 name = "super-py"
-version = "0.3.0"
+version = "0.4.0"
+repository = "https://github.com/mkrd/SuperPy"
 description = "Features that Python should have in the standard library"
 authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]
 license = "MIT"
