--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "super-py"
-version = "0.4.0"
+version = "0.4.1"
 repository = "https://github.com/mkrd/SuperPy"
 description = "Features that Python should have in the standard library"
 authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]
@@ -19,8 +19,7 @@ classifiers=[
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-pylint = "^2.6.0"
-flake8 = "^3.8.4"
+pycodestyle = "^2.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
